--- a/index.ejs
+++ b/index.ejs
@@ -1,11 +1,41 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="jp" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>test</title>
+    <title>ミニメッセージボード</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <script>
+        function init(){
+            var id = localStorage.getItem('id');
+            if(id == null){
+                location.href = './login';
+            }
+            document.querySelector('#id').textContent = 'ID:' + id;
+            document.querySelector('#id_input').value = id;
+        }
+    </script>
 </head>
-<body>
-    <p>テスト</p>
+<body class="container" onload="init();">
+    <header>
+        <h1 class="display-4">メッセージボード</h1>
+    </header>
+    <div role="main">
+        <p>※メッセージは最大10個まで保管されます。</p>
+        <form method='post' action='/'>
+            <p id="id"></p>
+            <input type="hidden" id="id_input" name="id">
+            <div class="form-group">
+                <label for="msg">Message</label>
+                <input type="text" name="msg" id="msg" class="form-control">
+            </div>
+            <input type="submit" value="送信" class="btn btn-primary">
+        </form>
+        <table class="table">
+            <% for(var i in data) { %>
+            <%- include('data_item', {val:data[i]}) %>
+            <% } %>
+        </table>
+    </div>
 </body>
 </html>
