--- a/index.ejs
+++ b/index.ejs
@@ -14,6 +14,18 @@
             document.querySelector('#id').textContent = 'ID:' + id;
             document.querySelector('#id_input').value = id;
         }
+
+        function submitForm(){
+            var myXml = new XMLHttpRequest();
+            var id = localStorage.getItem('id');
+            myXml.onload = function(){
+                location.reload();
+            }
+            myXml.open("POST", "/", true);
+            if(msg.value !== ''){
+                myXml.send('id=' + id + '&msg=' + msg.value);
+            }
+        }
     </script>
 </head>
 <body class="container" onload="init();">
@@ -22,14 +34,14 @@
     </header>
     <div role="main">
         <p>※メッセージは最大10個まで保管されます。</p>
-        <form method='post' action='/'>
+        <form method='post' action='/' onsubmit="return false">
             <p id="id"></p>
             <input type="hidden" id="id_input" name="id">
             <div class="form-group">
                 <label for="msg">Message</label>
                 <input type="text" name="msg" id="msg" class="form-control">
             </div>
-            <input type="submit" value="送信" class="btn btn-primary">
+            <input type="submit" value="送信" class="btn btn-primary" onclick="submitForm()">
         </form>
         <table class="table">
             <% for(var i in data) { %>
