--- a/login.ejs
+++ b/login.ejs
@@ -8,7 +8,7 @@
     <script>
         function setId(){
             var id = document.querySelector('#id_input').value;
-			localStorage.setItem('id', id);
+			sessionStorage.setItem('id', id);
 			location.href = "/";
         }
     </script>
